# simple-api-template

./: pyproject.toml
src/mock_api/: __init__.py  dag.py  get_app.py  run_dag.py
src/mock_api/models/: __init__.py  dag.py  request.py  response.py  task.py  task_error.py  task_result.py
